# llm-context-ext

./: .gitignore  main.py  pyproject.toml
llm_context_ext/agents/: __init__.py  assistant.py  critic.py  user.py
llm_context_ext/config/: config.ini
llm_context_ext/dataset/: __init__.py
llm_context_ext/helpers/: config.py  file.py  re.py  text.py
llm_context_ext/helpers/clients/: groq.py  openai.py
llm_context_ext/helpers/llms/: llama.py
llm_context_ext/helpers/llms/baseten/: llama.py  mistral.py
llm_context_ext/helpers/llms/groq/: llama.py
llm_context_ext/helpers/llms/openai/: llama.py
llm_context_ext/init/: logger.py
llm_context_ext/prompts/assistant/: system_message.txt
llm_context_ext/prompts/critic/: system_message.txt  user_message.txt
llm_context_ext/prompts/user/: system_message.txt  user_message.txt
llm_context_ext/tests/: dataset.ipynb  tokenizer.py  vllm_mixtral.py
